--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.druid.testOnReturn=false
 spring.druid.poolPreparedStatements=true
 spring.druid.maxPoolPreparedStatementPerConnectionSize=20
 spring.druid.asyncInit=true
+
+mitie.feature.filename=C:/Users/hongxinzhao/Desktop/owl/total_word_feature_extractor_wenda.dat
+mitie.category.filename=C:/Users/hongxinzhao/Desktop/owl/all1_model.dat
