--- a/src/main/resources/library.properties
+++ b/src/main/resources/library.properties
@@ -1,4 +1,9 @@
 dic=library/default.dic
+song=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:song', '1' from tb_music_resource
+singer=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:singer', '1' from tb_music_singer
+poetryTitle=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(title), 'c:poetryTitle', '1' from tb_poetry
+poetrySentence=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_sentence
+poetryAuthor=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:poetryAuthor', '1' from tb_author
 ambiguity=library/ambiguity.dic
 synonyms=library/synonyms.dic
 isRealName=true
