--- a/src/main/resources/library.properties
+++ b/src/main/resources/library.properties
@@ -1,6 +1,8 @@
 dic=library/default.dic
 song=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:song', '1' from tb_music_resource
 singer=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:singer', '1' from tb_music_singer
+#song=jdbc://jdbc:mysql://172.16.1.144:3306/music|root|123|select trim(song_name), 'c:song', '1' from song
+#singer=jdbc://jdbc:mysql://172.16.1.144:3306/music|root|123|select trim(artist_name), 'c:singer', '1' from song
 poetryTitle=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(title), 'c:poetryTitle', '1' from tb_poetry
 poetrySentence=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_sentence
 poetryAuthor=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:poetryAuthor', '1' from tb_author
