--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,14 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.8.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<start-class>com.yyd.semantic.YydSemanticApplication</start-class>
 	</properties>
 
 	<dependencies>
@@ -68,7 +69,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 	<packaging>war</packaging>
 </project>
