--- a/src/main/resources/library.properties
+++ b/src/main/resources/library.properties
@@ -1,8 +1,9 @@
 dic=library/default.dic
-song=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:song', '1' from tb_music_resource
-singer=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:singer', '1' from tb_music_singer
-#song=jdbc://jdbc:mysql://172.16.1.144:3306/music|root|123|select trim(song_name), 'c:song', '1' from song
-#singer=jdbc://jdbc:mysql://172.16.1.144:3306/music|root|123|select trim(artist_name), 'c:singer', '1' from song
+song=jdbc://jdbc:mysql://172.16.1.229:3306/kuwo_music|test|123456|select trim(song_name), 'c:song', '1' from tb_song
+singer=jdbc://jdbc:mysql://172.16.1.229:3306/kuwo_music|test|123456|select trim(artist_name), 'c:singer', '1' from tb_artist
+storyName=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(story_name), 'c:storyName', '1' from tb_story
+storyCategory=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(category_name), 'c:storyCategory', '1' from tb_category
+storyAlbum=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(album_name), 'c:storyAlbum', '1' from tb_album
 poetryTitle=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(title), 'c:poetryTitle', '1' from tb_poetry
 poetrySentence=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_sentence
 poetryAuthor=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:poetryAuthor', '1' from tb_author
