--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.redis.pool.min-idle=50
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=2000
 
-spring.datasource.url=jdbc:mysql://172.16.1.144:3306/?characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.url=jdbc:mysql://172.16.1.229:3306/?characterEncoding=utf-8
+spring.datasource.username=test
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mitie.feature.filename=C:/Users/hongxinzhao/Desktop/owl/total_word_feature_extractor_wenda.dat
