更新音乐场景和故事场景模板

--- a/src/main/resources/semantics/scenes/music.yml
+++ b/src/main/resources/semantics/scenes/music.yml
@@ -1,15 +1,15 @@
 searchBySinger:
   - '[[[我] 想|要] 听] $singer [的] (歌|歌曲|音乐)'
-  - '(播|唱|来|放) [放|首|个]|[一首|一个] $singer [的] (歌|歌曲|音乐)'
-  - '$singer [的] (歌|歌曲|音乐) [播|唱|来|放] [放|首|个]|[一首|一个]'
+  - '(播|唱|来|放|播放|换) [首|个]|[一首|一个] $singer [的] (歌|歌曲|音乐)'
+  - '$singer [的] (歌|歌曲|音乐) [播|唱|来|放|播放|换] [首|个]|[一首|一个]'
 searchBySong:
   - '[[我] 想|要] 听  $song'
-  - '(播|唱|来|放) [放|首|个]|[一首|一个] $song'
-  - '$song (播|唱|来|放) [放|首|个]|[一首|一个]'
+  - '(播|唱|来|放|播放|换) [首|个]|[一首|一个] $song'
+  - '$song (播|唱|来|放|播放|换) [首|个]|[一首|一个]'
 searchBySingerAndSong:
   - '[[我] 想|要] 听  $singer [的] $song'
-  - '(播|唱|来|放) [放|首|个]|[一首|一个] $singer [的] $song'
-  - '$singer [的] $song (播|唱|来|放) [放|首|个]|[一首|一个]'
+  - '(播|唱|来|放|播放|换) [首|个]|[一首|一个] $singer [的] $song'
+  - '$singer [的] $song (播|唱|来|放|播放|换) [首|个]|[一首|一个]'
 searchRandom:
   - '[[我] 想|要] 听  (歌|歌曲|音乐)'
-  - '(播|唱|来|放) [放|首|个]|[一首|一个] (歌|歌曲|音乐)'
+  - '(播|唱|来|放|播放|换) [首|个]|[一首|一个] (歌|歌曲|音乐)'
