--- a/src/main/resources/semantics/scenes/story.yml
+++ b/src/main/resources/semantics/scenes/story.yml
@@ -3,9 +3,14 @@ searchByName:
   - '$storyName [的] [故事] [[[我] 想|要] 听]'
 searchByAlbum:
   - '[[[我] 想|要] 听] $storyAlbum [故事]'
-  - '[说|讲|来] [个|一个] $storyAlbum [故事]'
+  - '$storyAlbum [的] [故事] [[[我] 想|要] 听] '
+  - '[说|讲|来|换] [个|一个] $storyAlbum [故事]'
+  - '$storyAlbum [的] [故事] [说|讲|来|换] [个|一个] '
 searchByCategory:
   - '[[[我] 想|要] 听] $storyCategory [的] [故事]'
+  - '$storyCategory [的] [故事] [[[我] 想|要] 听] '
+  - '[说|讲|来|换] [个|一个] $storyCategory [的] [故事]'
+  - '$storyCategory [的] [故事] [说|讲|来|换] [个|一个]'
 searchRandom:
-  - '[说|讲|来|听] [个|一个] [好听的] 故事'
+  - '[说|讲|来|听|换] [个|一个] [好听的] 故事'
   - '[[[我] 想|要] 听] 故事'
