更新诗词数据表名称

--- a/src/main/resources/library.properties
+++ b/src/main/resources/library.properties
@@ -5,8 +5,8 @@ storyName=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(st
 storyCategory=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(category_name), 'c:storyCategory', '1' from tb_category
 storyAlbum=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(album_name), 'c:storyAlbum', '1' from tb_album
 poetryTitle=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(title), 'c:poetryTitle', '1' from tb_poetry
-poetrySentence=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_sentence
-poetryAuthor=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:poetryAuthor', '1' from tb_author
+poetrySentence=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_poetry_sentence
+poetryAuthor=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:poetryAuthor', '1' from tb_poetry_author
 ambiguity=library/ambiguity.dic
 synonyms=library/synonyms.dic
 isRealName=true
