更新数据库到测试服

--- a/src/main/resources/library.properties
+++ b/src/main/resources/library.properties
@@ -1,12 +1,13 @@
 dic=library/default.dic
-song=jdbc://jdbc:mysql://172.16.1.229:3306/kuwo_music|test|123456|select trim(song_name), 'c:song', '1' from tb_song
-singer=jdbc://jdbc:mysql://172.16.1.229:3306/kuwo_music|test|123456|select trim(artist_name), 'c:singer', '1' from tb_artist
-storyName=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(story_name), 'c:storyName', '1' from tb_story
-storyCategory=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(category_name), 'c:storyCategory', '1' from tb_category
-storyAlbum=jdbc://jdbc:mysql://172.16.1.229:3306/story|test|123456|select trim(album_name), 'c:storyAlbum', '1' from tb_album
-poetryTitle=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(title), 'c:poetryTitle', '1' from tb_poetry
-poetrySentence=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_poetry_sentence
-poetryAuthor=jdbc://jdbc:mysql://172.16.1.229:3306/yyd_resources|test|123456|select trim(name), 'c:poetryAuthor', '1' from tb_poetry_author
+song=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(song_name), 'c:song', '1' from tb_music_song
+singer=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(artist_name), 'c:singer', '1' from tb_music_artist
+songTag=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(tag_name), 'c:songTag', '1' from tb_music_temp_tag
+storyName=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(story_name), 'c:storyName', '1' from tb_story
+storyCategory=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(category_name), 'c:storyCategory', '1' from tb_story_category
+storyAlbum=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(album_name), 'c:storyAlbum', '1' from tb_story_album
+poetryTitle=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(title), 'c:poetryTitle', '1' from tb_poetry
+poetrySentence=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(sentence), 'c:poetrySentence', '1' from tb_poetry_sentence
+poetryAuthor=jdbc://jdbc:mysql://120.24.242.163:33061/yyd_resources|yyd|123456|select trim(name), 'c:poetryAuthor', '1' from tb_poetry_author
 ambiguity=library/ambiguity.dic
 synonyms=library/synonyms.dic
 isRealName=true
