--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ spring.redis.pool.min-idle=50
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=2000
 
-spring.datasource.url=jdbc:mysql://172.16.1.229:3306/?characterEncoding=utf-8
-spring.datasource.username=test
+spring.datasource.url=jdbc:mysql://120.24.242.163:33061/?characterEncoding=utf-8
+spring.datasource.username=yyd
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-mitie.feature.filename=C:/Users/hongxinzhao/Desktop/owl/total_word_feature_extractor_wenda.dat
-mitie.category.filename=C:/Users/hongxinzhao/Desktop/owl/all1_model.dat
+mitie.feature.filename=E:/mitie_models/language_model/total_word_feature_extractor_wenda.dat
+mitie.category.filename=E:/mitie_models/scene_models/all1_model.dat
