--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.tomcat.accept-count= 1000
 debug=false
 
 spring.redis.database=0
-spring.redis.host=172.16.1.229
+spring.redis.host=120.24.242.163
 spring.redis.port=6379
 spring.redis.timeout=0
 spring.redis.pool.max-idle=500
@@ -19,5 +19,8 @@ spring.datasource.username=yyd
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-mitie.feature.filename=E:/mitie_models/language_model/total_word_feature_extractor_wenda.dat
-mitie.category.filename=E:/mitie_models/scene_models/all1_model.dat
+mitie.feature.filename=/root/lq/models/total_word_feature_extractor_wenda.dat
+mitie.category.filename=/root/lq/models/all1_model.dat
+
+#mitie.feature.filename=C:/Users/hongxinzhao/Desktop/owl/total_word_feature_extractor_wenda.dat
+#mitie.category.filename=C:/Users/hongxinzhao/Desktop/owl/all1_model.dat
