--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,14 +6,19 @@ server.tomcat.accept-count= 1000
 debug=false
 
 spring.redis.database=0
+#spring.redis.host=127.0.0.1
 spring.redis.host=172.16.1.229
 spring.redis.port=6379
+spring.redis.password=yyd123456
 spring.redis.timeout=0
 spring.redis.pool.max-idle=500
 spring.redis.pool.min-idle=50
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=2000
 
+#spring.datasource.url=jdbc:mysql://120.24.242.163:33061/?characterEncoding=utf-8
+#spring.datasource.username=yyd
+#spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://172.16.1.229:3306/?characterEncoding=utf-8
 spring.datasource.username=test
 spring.datasource.password=123456
@@ -21,6 +26,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #mitie.feature.filename=/root/lq/models/total_word_feature_extractor_wenda.dat
 #mitie.category.filename=/root/lq/models/all1_model.dat
+
+#mitie.feature.filename=/root/datas/total_word_feature_extractor_wenda.dat
+#mitie.category.filename=/root/datas/all1_model.dat
 
 mitie.feature.filename=C:/Users/hongxinzhao/Desktop/owl/total_word_feature_extractor_wenda.dat
 mitie.category.filename=C:/Users/hongxinzhao/Desktop/owl/all1_model.dat
