--- a/src/main/resources/semantics/scenes/music.yml
+++ b/src/main/resources/semantics/scenes/music.yml
@@ -1,19 +1,19 @@
 searchBySinger:
-  - '[[[我] 想|要] 听] [首|个]|[一首|一个] $singer [的] (歌|歌曲|音乐)'
-  - '(播|唱|来|放|播放|换) [首|个]|[一首|一个] $singer [的] (歌|歌曲|音乐)'
+  - '[[[我] 想|要] 听] [[一] 首|个] $singer [的] (歌|歌曲|音乐)'
+  - '(播|唱|来|放|播放|换) [[一] 首|个] $singer [的] (歌|歌曲|音乐)'
   - '$singer [的] (歌|歌曲|音乐) [播|唱|来|放|播放|换] [首|个|一首|一个]'
 searchBySong:
-  - '[[我] 想|要] 听 [首|个|一首|一个] $song'
-  - '(播|唱|来|放|播放|换) [首|个|一首|一个] $song'
-  - '$song (播|唱|来|放|播放|换) [首|个|一首|一个]'
+  - '[[我] 想|要] 听 [[一] 首|个] $song'
+  - '(播|唱|来|放|播放|换) [[一] 首|个] $song'
+  - '$song (播|唱|来|放|播放|换) [[一] 首|个]'
 searchBySingerAndSong:
-  - '[[我] 想|要] 听 [首|个|一首|一个]  $singer [的] $song'
-  - '(播|唱|来|放|播放|换) [首|个|一首|一个] $singer [的] $song'
-  - '$singer [的] $song (播|唱|来|放|播放|换) [首|个]|[一首|一个]'
+  - '[[我] 想|要] 听 [[一] 首|个] $singer [的] $song'
+  - '(播|唱|来|放|播放|换) [[一] 首|个] $singer [的] $song'
+  - '$singer [的] $song (播|唱|来|放|播放|换) [[一] 首|个]'
 searchByTag:
-  - '[[我] 想|要] 听 [首|个|一首|一个] $songTag [的] [歌|歌曲|音乐]'
-  - '(播|唱|来|放|播放|换) [首|个|一首|一个] $songTag [的] [歌|歌曲|音乐]'
-  - '$songTag [的] [歌|歌曲|音乐] (播|唱|来|放|播放|换) [首|个|一首|一个]'
+  - '[[我] 想|要] 听 [[一] 首|个] $songTag [的] [歌|歌曲|音乐]'
+  - '(播|唱|来|放|播放|换) [[一] 首|个] $songTag [的] [歌|歌曲|音乐]'
+  - '$songTag [[类] 的] [歌|歌曲|音乐] (播|唱|来|放|播放|换) [[一] 首|个]'
 searchRandom:
-  - '[[我] 想|要] 听  [首|个|一首|一个] (歌|歌曲|音乐)'
-  - '(播|唱|来|放|播放|换) [首|个|一首|一个] (歌|歌曲|音乐)'
+  - '[[我] 想|要] 听  [[一] 首|个] (歌|歌曲|音乐)'
+  - '(播|唱|来|放|播放|换) [[一] 首|个] (歌|歌曲|音乐)'
