--- a/src/main/resources/semantics/scenes/story.yml
+++ b/src/main/resources/semantics/scenes/story.yml
@@ -1,16 +1,16 @@
 searchByName:
-  - '[[[我] 想|要] 听] $storyName [的] [故事]'
+  - '[[我] 想|要] 听 $storyName [的] [故事]'
   - '$storyName [的] [故事] [[[我] 想|要] 听]'
 searchByAlbum:
   - '[[[我] 想|要] 听] $storyAlbum [故事]'
-  - '$storyAlbum [的] [故事] [[[我] 想|要] 听] '
-  - '[说|讲|来|换] [个|一个] $storyAlbum [故事]'
-  - '$storyAlbum [的] [故事] [说|讲|来|换] [个|一个] '
+  - '$storyAlbum 的 [故事] [[[我] 想|要] 听] '
+  - '[说|讲|来|换] [[一] 个] $storyAlbum [故事]'
+  - '$storyAlbum 的 [故事] (说|讲|来|换) [[一] 个]'
 searchByCategory:
-  - '[[[我] 想|要] 听] $storyCategory [的] [故事]'
-  - '$storyCategory [的] [故事] [[[我] 想|要] 听] '
-  - '[说|讲|来|换] [个|一个] $storyCategory [的] [故事]'
-  - '$storyCategory [的] [故事] [说|讲|来|换] [个|一个]'
+  - '[[我] 想|要] 听 $storyCategory [的] [故事]'
+  - '$storyCategory 的 [故事] [[[我] 想|要] 听] '
+  - '[说|讲|来|换] [[一] 个] $storyCategory [的] [故事]'
+  - '$storyCategory 的 [故事] (说|讲|来|换) [[一] 个]'
 searchRandom:
-  - '[说|讲|来|听|换] [个|一个] [好听的] 故事'
-  - '[[[我] 想|要] 听] 故事'
+  - '(说|讲|来|听|换) [[一] 个] [好听的] 故事'
+  - '[我] (想|要) 听故事'
