--- a/src/main/resources/semantics/scenes/poetry.yml
+++ b/src/main/resources/semantics/scenes/poetry.yml
@@ -5,7 +5,7 @@ searchByTitle:
   - '[[我] 想|要] (听|背|来|背诵|换) [[一] 首|个] $poetryTitle'
   - '$poetryTitle (背|来|背诵|换) [一] 首|个'
 searchByAuthorAndTitle:
-  - '[背|来|背诵|换] [[一] 首|个] $poetryAuthor 的 $poetryTitle'
+  - '[[我] 想|要] [听|背|来|背诵|换] [[一] 首|个] $poetryAuthor 的 $poetryTitle'
 searchByRandom:
   - '[[我] 想|要] (听|背|来|背诵|换) [[一] 首|个] 诗 [词]'
 nextSent:
