--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,25 @@ spring.redis.pool.max-wait=2000
 spring.datasource.url=jdbc:mysql://172.16.1.229:3306/?characterEncoding=utf-8
 spring.datasource.username=test
 spring.datasource.password=123456
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-#mitie.feature.filename=/root/lq/models/total_word_feature_extractor_wenda.dat
-#mitie.category.filename=/root/lq/models/all1_model.dat
+spring.druid.initial-size=5
+spring.druid.min-idle=10
+spring.druid.max-active=50
+spring.druid.max-wait=60000
+spring.druid.time-between-eviction-runs-millis=60000
+spring.druid.min-evictable-idle-time-millis=300000
+spring.druid.validation-query=SELECT 1
+spring.druid.test-while-idle=true
+spring.druid.test-on-borrow=false
+spring.druid.test-on-return=false
+spring.druid.pool-prepared-statements=true
+spring.druid.max-pool-prepared-statement-per-connection-size=20
+spring.druid.async-init=true
+
+#mitie.feature.filename=/root/semantic/models/total_word_feature_extractor_wenda.dat
+#mitie.category.filename=/root/semantic/models/all1_model.dat
 
 #mitie.feature.filename=/root/datas/total_word_feature_extractor_wenda.dat
 #mitie.category.filename=/root/datas/all1_model.dat
